# P13-WOD-Board

./: .mergify.yml  README.md  alembic.ini  constraints.txt  package.json  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: dependabot.yml
backend/: env-example  pyproject.toml  tox.ini
backend/wod_board/: config.py  exceptions.py  exceptions_routers.py  seed.py  web.py
backend/wod_board/alembic/: env.py
backend/wod_board/alembic/versions/: 44babe44ded5_.py  865d47baf506_.py  b1aad446a2b6_add_nullable_on_user_s_required_fields.py  d58cc847dc9f_.py  f36d13f81346_first_migration.py
backend/wod_board/crud/: equipment_crud.py  goal_crud.py  movement_crud.py  round_crud.py  type_crud.py  unit_crud.py  user_crud.py  wod_crud.py
backend/wod_board/models/: __init__.py  equipment.py  goal.py  movement.py  unit.py  user.py  w_type.py  wod.py  wod_round.py
backend/wod_board/routers/: equipment_routers.py  goal_routers.py  movement_routers.py  round_routers.py  type_routers.py  unit_routers.py  user_routers.py  wod_routers.py
backend/wod_board/schemas/: __init__.py  equipment_schemas.py  goal_schemas.py  movement_schemas.py  round_schemas.py  type_schemas.py  unit_schemas.py  user_schemas.py  wod_schemas.py
backend/wod_board/tests/: conftest.py  test_seed.py
backend/wod_board/tests/crud/: test_equipment.py  test_goal.py  test_movement.py  test_round.py  test_type.py  test_unit.py  test_user.py  test_wod.py
backend/wod_board/tests/models/: test_equipment.py  test_movement.py  test_round.py  test_type.py  test_user.py  test_wod.py
backend/wod_board/tests/routers/: test_equipment.py  test_goal.py  test_movement.py  test_round.py  test_type.py  test_unit.py  test_user.py  test_wod.py
backend/wod_board/tests/schemas/: test_user.py
backend/wod_board/utils/: config_utils.py  goal_utils.py  round_utils.py  schemas_utils.py  user_utils.py
(+126 files in other folders)
