[metadata]
name = wod_board
home-page = https://projet-13.ojardias.io
summary = An application for savings all your performances
description-file = README.md
author = GuillaumeOj
author-email = contact@ojardias.io
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9


[options]
packages = wod_board

install_requires =
    fastapi[all]
    SQLAlchemy[postgresql]
    uvicorn[standard]


[mypy]
ignore_missing_imports = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_any_generics = true
warn_return_any = true
files = wod_board
disallow_subclassing_any = true
warn_redundant_casts = true
strict_equality = true
no_implicit_optional = true
disallow_untyped_decorators = true
plugins = sqlmypy
